--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,6 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="icono.ico" />
   <!-- Bootstrap -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.1.3/minty/bootstrap.min.css"
-    integrity="sha512-dzNHnGRA5Hl/Yg99wApuTJsmIZeGI982+8TIa+p4YY56wHgm99KoeG9/PctDhl9WikDBDpFhEoLBI+QZcNidmw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>POKEDEX</title>
+  <title>POKÉDEX</title>
 </head>
 
 <body>
@@ -44,7 +41,4 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-
 </html>
